--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -1,37 +1,40 @@
 /* src/components/Home.css */
 
 .home-container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 3rem 2rem;
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f8fbff;
-    border-radius: 12px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-    margin-top: 300px;
-  }
-  
-  .home-container h1 {
-    font-size: 2.5rem;
-    margin-bottom: 1.5rem;
-    color: #080808;
-  }
-  
-  .home-container p {
-    font-size: 1.1rem;
-    line-height: 1.8;
-    color: #333;
-    margin-top: 1.5rem;
-  }
-  
-  .home-image {
-    width: 100%;
-    max-width: 600px;
-    height: auto;
-    margin: 0 auto;
-    display: block;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  }
-  
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 3rem 2rem;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f8fbff;
+  border-radius: 12px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  margin-top: 0px;
+}
+
+.home-container h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  color: #080808;
+}
+
+.home-container p {
+  font-size: 1.1rem;
+  line-height: 1.8;
+  color: #333;
+  margin-top: 1.5rem;
+}
+
+.home-image {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+
+
+
+
