--- a/frontend/src/components/Predict.css
+++ b/frontend/src/components/Predict.css
@@ -5,7 +5,8 @@
   background-color: #f4f9fd;
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  margin-top: 100px;
+  margin-top: 200px;
+  max-height: 1000px;
 }
 
 h2 {
@@ -17,7 +18,7 @@ h2 {
 form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 input,
@@ -50,14 +51,36 @@ h3 {
   margin-top: 2rem;
   text-align: center;
   color: #0a2a43;
+  display: flex;
+  justify-content: center; /* Centers horizontally */
+  align-items: center; /* Centers vertically */
+  height: 100px; /* Adjust height as needed */
+  font-size: 1.5rem;
+  font-weight: bold;
 }
+
 
 ul {
   margin-top: 1rem;
   padding-left: 1.2rem;
   color: #060606;
+  
 }
 
 li {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
+.metrics-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.metrics-container ul {
+  text-align: left;
+  padding: 1rem 2rem;
+  background-color: #e8f0fe;
+  border-radius: 10px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+}
+
